src/containers/location/Location.module.scss
.card {
  min-height: 350px;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 16px;
  overflow: hidden;
  transition: all 0.25s ease-out;
  min-width: 280px;
  position: relative;
  &:hover {
    box-shadow: 0 0 2px #bcb9b5;
    .gear {
      opacity: 0.3;
    }
  }

  .gear {
    position: absolute;
    top: 15px;
    right: 15px;
    opacity: 0;
    z-index: 2;
    transition: opacity 0.2s linear;
    cursor: pointer;
    svg {
      width: 24px;
      height: 24px;
    }
    &:hover {
      opacity: 1;
    }
  }
}

.textArea {
  margin-top: 10px;
  padding: 8px;
  width: 90%;
  resize: vertical;
  border: 1px solid orange;
  box-shadow: 0 0 2px 1px orange;
  outline: none;
  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  font-size: 16px;
}

.message {
  margin-top: 8px;
  color: grey;
  text-decoration: underline;
  text-decoration-style: dotted;
  white-space: 'pre-wrap';
}

